burgerbutton fix line-height

--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -1880,6 +1880,7 @@ body {
 		font-size: 18px !important;
 		font-weight: normal !important;
 		margin: 0 !important;
+		line-height: 28px !important;
 		&:hover, &:focus {
 			text-decoration: none !important;
 			border-bottom: 0 !important;
