--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -1894,4 +1894,7 @@ body {
 		display: block;
 		margin: 0 0 5px;
 	}
+	.site-navigation ul:hover .current {
+		background: url(@theme_image_path@/custom/icon-check.png) no-repeat 15px 11px;
+	}
 }
