--- a/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
+++ b/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
@@ -13,13 +13,14 @@
 
   $theme.include($top_head_include)
 
+  <script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/jquery.js"></script>
   <script type='text/javascript'>
 
   $(document).ready(function(){
 
   // iOS Hover Event Class Fix
   if((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i)) || (navigator.userAgent.match(/iPad/i))) {
-  $(".nav li a").click(function(){  // Update class to point at the head of the list
+  $(".site-navigation li a").click(function(){  // Update class to point at the head of the list
   });
 
   }
@@ -103,7 +104,6 @@ $theme.include($body_top_include)
     </div>
   </footer>
 
-<script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/jquery.js"></script>
 <script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/bootstrap.min.js"></script>
 
 $theme.include($body_bottom_include)
