--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -962,6 +962,9 @@ body {
 	.container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse {
 		margin: 0;
 	}
+	.navbar > .container > #navbar {
+		position: static !important;
+	}
 	#_145_navAccountControlsNavbarCollapse > .nav.nav-account-controls > li:nth-last-child(3) {
 		margin-right: 18px;
 	}
@@ -1030,8 +1033,7 @@ body {
 	}
 	#navigation {
 		margin-top: 46px;
-		position: absolute;
-		right: 0;
+		float: right;
 		display: block;
 		.navbar-inner {
 			background: transparent;
@@ -1293,6 +1295,9 @@ body {
 			width: 300px;
 			float: none !important;
 		}
+		#_145_navSiteNavigationNavbarBtn {
+			top: 88px !important;
+		}
 		#_145_navAddControlsNavbarCollapse {
 			display: none !important;
 		}
@@ -1406,12 +1411,6 @@ body {
 			span.title {
 				font-size: 21px;
 			}
-		}
-		#navigation {
-    		margin-top: 0;
-		}
-		.navbar > .container > #navbar {
-    		height: 50px;
 		}
 		#_145_navAccountControlsNavbarCollapse {
 			margin-left: 0px;
@@ -1551,9 +1550,6 @@ body {
 			font-size: 14px;
 			line-height: 18px;
 		}
-		#navigation {
-    		margin-top: -60px;
-		}
 		.navbar > .container > #navbar {
     		height: auto;
 		}
@@ -1684,10 +1680,6 @@ body {
 				font-size: 11px;
 				line-height: 18%;
 			}
-		}
-
-		#navigation {
-    		margin-top: 46px;
 		}
 		.dockbar-split .dockbar .navbar-inner .btn-navbar {
 			float: right;
@@ -1840,61 +1832,79 @@ body {
 }
 
 @media screen and (max-width: 991px) {
-	.site-navigation {
-		position: relative;
-		min-height: 40px;
-		float: right;
-		margin-top: -65px;
-		z-index: 100;
-	}	
-	.site-navigation ul {
-		width: 190px;
-		padding: 1px 0;
-		position: absolute;
-		height: auto !important;
-		top: 0;
-		left: 0;
-		border: solid 1px #aaa;
-		background: #fff url(@theme_image_path@/custom/icon-menu.png) no-repeat 15px 11px;
-		@include border-radius(5px);
-		@include box-shadow(1px 2px 6px 0px rgba(0, 0, 0, 0.2));
-		z-index: 100;
-	}
-	.site-navigation li {
-		display: none;
-		margin: 0;
-		float: none !important;
-		margin: 0px 0px 0px 37px !important;
-		.dropdown-menu.child-menu, .icon-caret-down {
+	.aui {
+		#_145_navSiteNavigationNavbarBtn {
+			display: block !important;
+			position: absolute !important;
+			top: 79px !important;
+			right: 0 !important;
+			background: #0066A1;
+			&.open {
+				background: #F5AF45;
+			}
+		}
+		.site-navigation {
 			display: none !important;
 		}
-	}
-	.site-navigation .selected {
-		display: block;
-	}
-	.site-navigation a {
-		display: block;
-		padding: 1px 5px 4px 2px !important;
-		text-align: left;
-		font-family: 'Avenir35-Light' !important;
-		font-size: 18px !important;
-		font-weight: normal !important;
-		margin: 0 !important;
-		line-height: 28px !important;
-		&:hover, &:focus {
-			text-decoration: none !important;
-			border-bottom: 0 !important;
+		.site-navigation.open {
+			display: block !important;
+			position: absolute !important;
+			margin: 0 !important;
+			top: 30px !important;
+			right: 27px !important;
 		}
-	}
-	.site-navigation .current a {
-		background: none;
-		color: #666;
-	}
-	.site-navigation ul:hover li {
-		display: block;
-		margin: 0 0 5px;
-	}
-	.site-navigation ul:hover .selected {
-		background: url(@theme_image_path@/custom/icon-check.png) no-repeat 15px 11px;
+		.site-navigation {
+			position: relative;
+			min-height: 40px;
+			float: right;
+			margin-top: -65px;
+			z-index: 100;
+		}	
+		.site-navigation ul {
+			width: 170px;
+			padding: 1px 0;
+			position: absolute;
+			height: auto !important;
+			top: 0;
+			left: 0;
+			border: solid 1px #aaa;
+			background: #fff;
+			@include border-radius(3px);
+			@include box-shadow(0px 3px 3px 0px rgba(0, 0, 0, 0.1));
+			z-index: 100;
+		}
+		.site-navigation li {
+			margin: 0;
+			float: none !important;
+			margin: 0px 0px 0px 8px !important;
+			.dropdown-menu.child-menu, .icon-caret-down {
+				display: none !important;
+			}
+		}
+		.site-navigation .selected {
+			display: block;
+		}
+		.site-navigation a {
+			display: block;
+			padding: 1px 5px 4px 2px !important;
+			text-align: left;
+			font-family: 'Avenir35-Light' !important;
+			font-size: 18px !important;
+			font-weight: normal !important;
+			margin: 0 !important;
+			line-height: 28px !important;
+			&:hover, &:focus {
+				text-decoration: none !important;
+				border-bottom: 0 !important;
+			}
+		}
+		.site-navigation .current a {
+			background: none;
+			color: #666;
+		}
+		.site-navigation ul:hover li {
+			display: block;
+			margin: 0 0 5px;
+		}
 	}
 }
