--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -224,13 +224,16 @@ body {
 						button[name="search"] {
 							height: 25px;
 							width: 26px;
+							background: $darkblue !important;
 							border-radius: 0;
+							color: #fff !important;
 							overflow: hidden;
 							border: 0;
 							position: absolute;
 							top: 20px;
 							right: 15px;
-							background: url("@theme_image_path@/custom/enter.png") no-repeat 0 0;
+							font-size: 12px;
+							text-indent: 3px;
 						}
 					}
 					> .dropdown-menu {
@@ -321,8 +324,12 @@ body {
 								left: 214px;
 								top: 24px;
 								position: absolute;
-								background: url("@theme_image_path@/custom/enter.png") no-repeat 0 0;
+								text-indent: 3px;
+								background: $darkblue !important;
 								border: 0;
+								color: #fff !important;
+								line-height: 14px;
+								font-size: 12px;
 								overflow: hidden;
 							}
 							.navigation {
@@ -1348,10 +1355,6 @@ body {
 				background: url("@theme_image_path@/custom/storm_bg_small.jpg") no-repeat 0 0 / cover #2A3B4B;
 			}
 		}
-		.site-navigation.open {
-			top: 30px !important;
-			right: 27px !important;
-		}
 		.dockbar-split .dockbar .navbar-inner .btn-navbar {
 			float: right;
 			a.taglib-icon {
@@ -1715,17 +1718,7 @@ body {
 		}
 	}
 }
-@media (min-width: 980px) {
-	.aui {
-		.container, .navbar .container, .portlet-dockbar .dockbar {
-			width: 940px;
-		}
-		.site-navigation.open {
-		    top: 45px !important;
-		    right: 56px !important;
-		}
-	}
-}
+
 @media (min-width: 992px) {
 	.aui {
 		.container, .navbar .container, .portlet-dockbar .dockbar {
@@ -1754,10 +1747,6 @@ body {
 				font-size: 16px;
 				line-height: 43%;
 			}
-		}
-		.site-navigation.open {
-			top: 30px !important;
-			right: 27px !important;
 		}
 		.category .col-sm-12.col-md-4.col-lg-4 a {
 			height: 314px;
@@ -1851,7 +1840,6 @@ body {
 			top: 79px !important;
 			right: 0 !important;
 			background: #0066A1;
-			border: 0;
 			&.open {
 				background: #F5AF45;
 			}
@@ -1867,10 +1855,19 @@ body {
 			right: 27px !important;
 		}
 		.site-navigation {
+			position: relative;
+			min-height: 40px;
+			float: right;
+			margin-top: -65px;
 			z-index: 100;
 		}	
 		.site-navigation ul {
 			width: 170px;
+			padding: 1px 0;
+			position: absolute;
+			height: auto !important;
+			top: 0;
+			left: 0;
 			border: solid 1px #aaa;
 			background: #fff;
 			@include border-radius(3px);
@@ -1878,19 +1875,37 @@ body {
 			z-index: 100;
 		}
 		.site-navigation li {
+			margin: 0;
 			float: none !important;
 			margin: 0px 0px 0px 8px !important;
 			.dropdown-menu.child-menu, .icon-caret-down {
 				display: none !important;
 			}
 		}
+		.site-navigation .selected {
+			display: block;
+		}
 		.site-navigation a {
+			display: block;
+			padding: 1px 5px 4px 2px !important;
+			text-align: left;
+			font-family: 'Avenir35-Light' !important;
 			font-size: 18px !important;
+			font-weight: normal !important;
+			margin: 0 !important;
 			line-height: 28px !important;
 			&:hover, &:focus {
 				text-decoration: none !important;
 				border-bottom: 0 !important;
 			}
+		}
+		.site-navigation .current a {
+			background: none;
+			color: #666;
+		}
+		.site-navigation ul:hover li {
+			display: block;
+			margin: 0 0 5px;
 		}
 	}
 }
